<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arcquim.system.android.WelcomeActivity"
    android:background="@color/windowBackground">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/welcomePageTitle"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="@dimen/model_checking_system_text_size"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_top"
        android:textColor="@color/textColor"></TextView>

    <TextView
        android:id="@+id/yourEmailTextView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/yourEmail"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size"></TextView>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_below="@+id/yourEmailTextView"
        android:layout_marginRight="@dimen/edit_text_margin_left_right"
        android:layout_marginLeft="@dimen/edit_text_margin_left_right"
        android:hint="@string/emailHint"
        android:textColor="@color/textColor"
        android:layout_marginTop="@dimen/little_margin"></EditText>

    <Button
        android:id="@+id/enterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonEnterText"
        android:layout_below="@+id/emailEditText"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:textColor="@color/textColor"
        android:layout_marginTop="@dimen/little_margin"
        android:layout_marginLeft="@dimen/edit_text_margin_left_right"
        android:layout_marginRight="@dimen/edit_text_margin_left_right"/>
</RelativeLayout>
